--- a/factor-02/01-crewai/chatbot/pyproject.toml
+++ b/factor-02/01-crewai/chatbot/pyproject.toml
@@ -5,7 +5,9 @@ description = "chatbot using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "crewai[tools]>=0.119.0,<1.0.0"
+    "crewai[tools]>=0.119.0,<1.0.0",
+    "langchain-anthropic>=0.1.1",
+    "python-dotenv>=1.0.0"
 ]
 
 [project.scripts]
