--- a/factor-02/01-crewai/chatbot/pyproject.toml
+++ b/factor-02/01-crewai/chatbot/pyproject.toml
@@ -11,11 +11,9 @@ dependencies = [
 ]
 
 [project.scripts]
-chatbot = "chatbot.main:run"
+chatbot = "chatbot.main:process_command_line"
+devops-assistant = "chatbot.main:process_command_line"
 run_crew = "chatbot.main:run"
-train = "chatbot.main:train"
-replay = "chatbot.main:replay"
-test = "chatbot.main:test"
 
 [build-system]
 requires = ["hatchling"]
