--- a/factor-02/01-crewai/chatbot/src/chatbot/config/tasks.yaml
+++ b/factor-02/01-crewai/chatbot/src/chatbot/config/tasks.yaml
@@ -1,17 +1,18 @@
-research_task:
+research_query:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
+    Research the knowledge base to find relevant information to answer the following question: "{user_question}"
+    Use the knowledge files available to find the most accurate and helpful information. If the knowledge base
+    doesn't contain specific information to answer the question, clearly state that limitation and provide
+    general best practices related to the topic.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    Accurate findings from the knowledge base answering '{user_question}', including relevant details or steps.
+    If no specific answer exists, note the limitation and provide relevant best practices.
+  agent: knowledge_researcher
 
-reporting_task:
+formulate_answer:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Using the research, provide a clear, concise answer to '{user_question}' as an experienced DevOps engineer. 
+    Include relevant technical details and practical steps or best practices, keeping it accessible.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    A clear, concise, technically accurate answer to '{user_question}', reflecting DevOps best practices with relevant details or steps from the knowledge base, presented in an accessible manner.
+  agent: devops_assistant
