--- a/factor-02/01-crewai/chatbot/src/chatbot/config/tasks.yaml
+++ b/factor-02/01-crewai/chatbot/src/chatbot/config/tasks.yaml
@@ -1,18 +1,35 @@
 research_query:
   description: >
-    Research the knowledge base to find relevant information to answer the following question: "{user_question}"
-    Use the knowledge files available to find the most accurate and helpful information. If the knowledge base
-    doesn't contain specific information to answer the question, clearly state that limitation and provide
-    general best practices related to the topic.
+    IMPORTANT: You MUST ONLY use information from the knowledge base files to answer this question: "{user_question}"
+    
+    Your main task is to extract relevant content from the knowledge files that directly addresses this question.
+    DO NOT use your own knowledge unless absolutely necessary. Prioritize finding exact matches or related
+    content in the knowledge files. 
+    
+    If there are multiple knowledge files with relevant information, combine their insights.
+    If the knowledge base doesn't contain specific information to answer the question, clearly state 
+    "The knowledge base does not contain information about this topic."
+    
+    IMPORTANT: Include direct quotes and specific details from the knowledge files. 
+    Mention which knowledge file each piece of information comes from.
   expected_output: >
-    Accurate findings from the knowledge base answering '{user_question}', including relevant details or steps.
-    If no specific answer exists, note the limitation and provide relevant best practices.
+    Specific findings from the knowledge base that directly answer '{user_question}', including direct quotes, 
+    file names, and exact details found in the knowledge files. If no relevant information exists in the knowledge base,
+    explicitly state this limitation.
   agent: knowledge_researcher
 
 formulate_answer:
   description: >
-    Using the research, provide a clear, concise answer to '{user_question}' as an experienced DevOps engineer. 
-    Include relevant technical details and practical steps or best practices, keeping it accessible.
+    Using ONLY the research provided from the knowledge base, create a clear, concise answer to '{user_question}'
+    as an experienced DevOps engineer. Do not introduce new information that wasn't in the research.
+    
+    IMPORTANT: Your answer must be directly based on the knowledge base content. If the research indicates
+    the knowledge base doesn't have information on this topic, acknowledge this limitation in your response.
+    
+    Organize the information logically, including specific details, commands, or procedures mentioned in the 
+    knowledge files. Make sure to maintain technical accuracy while keeping the explanation accessible.
   expected_output: >
-    A clear, concise, technically accurate answer to '{user_question}', reflecting DevOps best practices with relevant details or steps from the knowledge base, presented in an accessible manner.
+    A clear, concise answer that directly reflects the information found in the knowledge base. The answer should
+    maintain technical accuracy while being accessible, and should never introduce information not found in the
+    provided research. If the knowledge base lacks information on the topic, acknowledge this limitation clearly.
   agent: devops_assistant
