--- a/factor-02/01-crewai/chatbot/pyproject.toml
+++ b/factor-02/01-crewai/chatbot/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "crewai[tools]>=0.119.0,<1.0.0",
     "langchain-openai>=0.1.1",
-    "python-dotenv>=1.0.0"
+    "python-dotenv>=1.0.0",
+    "langfuse>=0.1.0",
+    "openlit>=0.1.0",
 ]
 
 [project.scripts]
